--- a/index.html
+++ b/index.html
@@ -218,31 +218,31 @@
                 <div
                     class="inline-flex items-center gap-2 bg-white/10 backdrop-blur-md border border-white/20 rounded-full px-4 py-1.5 mb-8 shadow-lg animate-bounce-slow">
                     <span class="w-2 h-2 rounded-full bg-brand-green animate-pulse"></span>
-                    <span class="text-sm font-medium tracking-wide text-blue-50">Spring Booking Special: Save 5%
+                    <span class="text-sm font-medium tracking-wide text-blue-50">Price Match Guarantee + 5% Discount!
                         Today</span>
                 </div>
 
                 <h1 class="text-4xl md:text-6xl font-bold mb-6 tracking-tight leading-tight drop-shadow-lg">
-                    Fall in Love with Your <br class="hidden md:block"> Home All Over Again.
+                    Transform Your Space with <br class="hidden md:block">Expert Painting Services.
                 </h1>
 
                 <p class="text-lg md:text-xl mb-10 text-blue-50 font-light max-w-2xl mx-auto leading-relaxed">
-                    Professional painting made simple. We handle the prep, the painting, and the cleanup, so you can
-                    enjoy the results without the stress.
+                    Affordable, High-Quality Residential & Commercial Painting in Toronto, Brampton, Mississauga &
+                    Beyond.
                 </p>
 
                 <div class="flex flex-col sm:flex-row justify-center gap-5 mb-10">
                     <a href="contact.html"
                         class="group relative bg-brand-green text-white px-8 py-4 rounded-full font-bold text-lg hover:bg-green-600 transition-all shadow-[0_0_20px_rgba(40,167,69,0.3)] hover:shadow-[0_0_30px_rgba(40,167,69,0.5)] hover:-translate-y-1 overflow-hidden">
-                        <span class="relative z-10">Get My Free Quote</span>
+                        <span class="relative z-10">Request a Free Quote</span>
                         <div
                             class="absolute top-0 -inset-full h-full w-1/2 z-5 block transform -skew-x-12 bg-gradient-to-r from-transparent to-white opacity-20 group-hover:animate-shine">
                         </div>
                     </a>
 
-                    <a href="gallery.html"
+                    <a href="pricing.html"
                         class="flex items-center justify-center gap-2 bg-white/10 backdrop-blur-sm border border-white/30 text-white px-8 py-4 rounded-full font-bold text-lg hover:bg-white hover:text-brand-blue transition hover:-translate-y-1">
-                        See Our Work
+                        View Pricing
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                             stroke="currentColor" class="w-5 h-5">
                             <path stroke-linecap="round" stroke-linejoin="round"
