text revert to main

--- a/index.html
+++ b/index.html
@@ -437,12 +437,6 @@
                             </li>
                         </ul>
 
-                        <div class="mt-10">
-                            <a href="about.html"
-                                class="text-brand-blue font-bold hover:text-brand-green transition flex items-center gap-2">
-                                Read Our Full Story <span>&rarr;</span>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -498,8 +492,9 @@
                                 alt="Popcorn Removal">
                         </div>
                         <div class="p-8 flex flex-col flex-grow">
-                            <h3 class="text-xl font-bold text-brand-blue mb-3">Popcorn Removal</h3>
-                            <p class="text-slate-500 mb-6 flex-grow">Update your home with our safe removal service,
+                            <h3 class="text-xl font-bold text-brand-blue mb-3">Popcorn Ceiling Removal</h3>
+                            <p class="text-slate-500 mb-6 flex-grow">Update your home with our safe popcorn ceiling
+                                removal service,
                                 leaving a smooth, modern ceiling finish.</p>
                             <a href="popcorn-ceiling-removal.html"
                                 class="text-brand-green font-bold uppercase text-sm tracking-wider group-hover:text-brand-blue transition">Learn
@@ -515,9 +510,9 @@
                                 alt="Cabinets">
                         </div>
                         <div class="p-8 flex flex-col flex-grow">
-                            <h3 class="text-xl font-bold text-brand-blue mb-3">Kitchen Cabinets</h3>
-                            <p class="text-slate-500 mb-6 flex-grow">A cost-effective transformation. Get a
-                                factory-finish look for a fraction of the replacement cost.</p>
+                            <h3 class="text-xl font-bold text-brand-blue mb-3">Kitchen Cabinets Painting</h3>
+                            <p class="text-slate-500 mb-6 flex-grow">A cost effective transformation. Get a
+                                factory finish look for a fraction of the replacement cost.</p>
                             <a href="kitchen-cabinet-painting.html"
                                 class="text-brand-green font-bold uppercase text-sm tracking-wider group-hover:text-brand-blue transition">Learn
                                 More &rarr;</a>
@@ -532,9 +527,9 @@
                                 alt="Door Fence">
                         </div>
                         <div class="p-8 flex flex-col flex-grow">
-                            <h3 class="text-xl font-bold text-brand-blue mb-3">Door & Fence</h3>
-                            <p class="text-slate-500 mb-6 flex-grow">Boost curb appeal and protect your investment with
-                                expert exterior painting and staining.</p>
+                            <h3 class="text-xl font-bold text-brand-blue mb-3">Door & Fence Painting</h3>
+                            <p class="text-slate-500 mb-6 flex-grow">Boost your curb appeal and protect your investment
+                                with our expert exterior door and fence painting services.</p>
                             <a href="door-fence-painting.html"
                                 class="text-brand-green font-bold uppercase text-sm tracking-wider group-hover:text-brand-blue transition">Learn
                                 More &rarr;</a>
@@ -573,14 +568,17 @@
                             class="w-20 h-20 bg-brand-blue text-white rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6 border-4 border-brand-green shadow-lg">
                             1</div>
                         <h3 class="text-xl font-bold text-slate-800 mb-2">Get a Quote</h3>
-                        <p class="text-slate-500 text-sm">Contact us for a fast, free, and detailed estimate.</p>
+                        <p class="text-slate-500 text-sm">Contact us for a fast, free, and detailed estimate, You can
+                            even upload pictures of your project.</p>
                     </div>
                     <div class="step-item fade-on-scroll">
                         <div
                             class="w-20 h-20 bg-brand-blue text-white rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6 border-4 border-brand-green shadow-lg">
                             2</div>
                         <h3 class="text-xl font-bold text-slate-800 mb-2">We Prep</h3>
-                        <p class="text-slate-500 text-sm">We carefully cover furniture and floors to protect your home.
+                        <p class="text-slate-500 text-sm">Our team carefully covers furniture, floors, and fixtures to
+                            ensure a clean and protected workspace.
+
                         </p>
                     </div>
                     <div class="step-item fade-on-scroll">
@@ -588,7 +586,8 @@
                             class="w-20 h-20 bg-brand-blue text-white rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6 border-4 border-brand-green shadow-lg">
                             3</div>
                         <h3 class="text-xl font-bold text-slate-800 mb-2">We Paint</h3>
-                        <p class="text-slate-500 text-sm">Using premium paints, we transform your space with precision.
+                        <p class="text-slate-500 text-sm">Using premium paints and expert techniques, we transform your
+                            space with precision and care.
                         </p>
                     </div>
                     <div class="step-item fade-on-scroll">
@@ -596,7 +595,8 @@
                             class="w-20 h-20 bg-brand-blue text-white rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6 border-4 border-brand-green shadow-lg">
                             4</div>
                         <h3 class="text-xl font-bold text-slate-800 mb-2">You Love It</h3>
-                        <p class="text-slate-500 text-sm">Final walk-through to ensure 100% satisfaction.</p>
+                        <p class="text-slate-500 text-sm">We review the finished work with you to ensure 100%
+                            satisfaction. We don't leave until you're happy.</p>
                     </div>
                 </div>
             </div>
@@ -629,7 +629,21 @@
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Markham</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
-                                Richmond Hill</li>
+                                York Region</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Pickering</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Caledon</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Downtown Toronto</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Hamilton</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Milton</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Kitchener</li>
+
+
                         </ul>
                     </div>
                     <div class="areas-map fade-on-scroll order-first lg:order-last">
