--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     Transform Your Space with <br class="hidden md:block">Expert Painting Services.
                 </h1>
 
-                <p class="text-lg md:text-xl mb-10 text-blue-50 font-light max-w-2xl mx-auto leading-relaxed">
+                <p class="text-lg md:text-xl mb-10 text-blue-50 font-medium max-w-2xl mx-auto leading-relaxed">
                     Affordable, High-Quality Residential & Commercial Painting in Toronto, Brampton, Mississauga &
                     Beyond.
                 </p>
@@ -453,7 +453,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4f9d?q=80&w=2070&auto=format&fit=crop"
+                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Residential">
                         </div>
@@ -487,7 +487,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1533750088811-7a8b16218a58?q=80&w=2070&auto=format&fit=crop"
+                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Popcorn Removal">
                         </div>
@@ -539,7 +539,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1584622050111-993a426fbf0a?q=80&w=2070&auto=format&fit=crop"
+                            <img src="assets/images/bathroom.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Bathroom">
                         </div>
@@ -635,13 +635,13 @@
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Caledon</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
-                                Downtown Toronto</li>
+                                Kitchener</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Hamilton</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Milton</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
-                                Kitchener</li>
+                                Downtown Toronto</li>
 
 
                         </ul>
@@ -802,7 +802,7 @@
                             </div>
                             <div>
                                 <h4 class="text-lg font-bold text-slate-900">Service Area</h4>
-                                <p class="text-slate-600 text-lg">Toronto, Mississauga, Brampton & GTA</p>
+                                <p class="text-slate-600 text-lg">Toronto, Mississauga, Brampton & Many more</p>
                             </div>
                         </div>
                     </div>
